--- a/robot/robot_controllers/Wafflebot/moveit/cpp_ws/package.xml
+++ b/robot/robot_controllers/Wafflebot/moveit/cpp_ws/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>env_collision_checker</name>
+  <name>collision_publisher</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
   <maintainer email="haavardkso@uia.no">havard</maintainer>
