--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,5 @@ log/
 /robot/assets/misc/time_recordings.json
 /robot/assets/position_data/camera_readings.json
 /robot/assets/position_data/offsets.json
+/robot/assets/position_data/recordings.json
 
