--- a/robot/assets/misc/modes.yaml
+++ b/robot/assets/misc/modes.yaml
@@ -3,7 +3,7 @@ groups:
     operating_mode: position
     profile_type: velocity
     profile_velocity: 131
-    profile_accelertion: 25
+    profile_acceleration: 25
     torque_enable: true
 
 singles:
