updated config for new origin

--- a/camera/config/config.yaml
+++ b/camera/config/config.yaml
@@ -6,12 +6,12 @@ marker_length: 0.04750  # default marker length
 marker_sizes:
   25: 0.0480        # marker 25 has a size of 0.08 m
   33: 0.0330        # marker 23 has a size of 0.06 m
-  0: 0.0470
+  0: 0.0700
   10: 0.0470
 origin_id: 0
-offset_x: 0 # -0.18
-offset_y: 0 # -0.18
-offset_z: 0.0000
+offset_x: -0.091
+offset_y: -0.091
+offset_z: -0.013
 bias_x: 0.0000
 bias_y: 0.0000
 bias_z: 0.0000
