--- a/camera/config/config.yaml
+++ b/camera/config/config.yaml
@@ -1,6 +1,7 @@
 resolution: [1280, 720]
 resolution_d: [1280, 720]
 fps: 30
+fps_d: 30
 dictionary: DICT_4X4_50
 marker_length: 0.04750  # default marker length
 marker_sizes:
