--- a/.gitignore
+++ b/.gitignore
@@ -9,4 +9,5 @@ log/
 /robot/assets/position_data/camera_readings.json
 /robot/assets/position_data/offsets.json
 /robot/assets/position_data/recordings.json
+/robot/assets/position_data/robot.json
 
